Crud Operation using HTML CSS and Js

--- a/Crud Operation Using HTML CSS and Js/index.html
+++ b/Crud Operation Using HTML CSS and Js/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Crud Operation</title>
+    <title>Crud Operation: Store List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 style="padding-left: 40%;"> Basic Crud Operations </h1>
+    <h1 style="padding-left: 35%;"> Basic Crud Operations Store List </h1>
     <table>
         <tr>
             <td>
