--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -21,7 +21,7 @@
             </form>
         </div>
         <div class="form-footer">
-            <span>Not a member? <a href="signup.html">Signup Here</a></span>
+            <span>Not a member? <a href="index.html">Signup Here</a></span>
         </div>
     </div>
     
