completed Abstract web-design app

--- a/Abstract Help Page Copy/index.html
+++ b/Abstract Help Page Copy/index.html
@@ -1,34 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abstract | Help Page</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <navbar>
-      <div class="navi">
-        <div class="navitems">
-          <span
-            ><img src="assets/logo.svg" alt="" /> <helper>| Help Center</helper>
-          </span>
 
-          <button class="btn">Submit a request</button>
-          <button class="btn" id="signup">Sign in</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abstract | Help Page</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+
+
+  <navbar>
+    <div class="navi">
+      <div class="navitems">
+        <span><img src="assets/logo.svg" alt="" />
+          <helper>| Help Center</helper>
+        </span>
+
+        <button class="btn">Submit a request</button>
+        <button class="btn" id="signup">Sign in</button>
+      </div>
+    </div>
+  </navbar>
+
+
+  <section>
+    <div class="dashboard">
+      <div class="dash-child">
+        <div>How can we help?</div>
+        <form action="https://www.google.com/search?">
+          <input type="text" placeholder="Search" class="searchbox" name="q">
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <section class="section2">
+    <div class="mainbody">
+      <div class="left">
+        <div class="content-box">
+          <div><img src="./assets/icon-versions.png" alt="icon-versions"></div>
+          <div><span><strong>Branches</strong></span>
+            <p>Abstract Branches lets you manage, version, and document your designs in one place.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
+        </div>
+        <div class="content-box">
+          <div><img src="./assets/icon-organizations.png" alt="icon-versions"></div>
+          <div><span><strong>Manage organizations, teams, and projects</strong></span>
+            <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
+        </div>
+        <div class="content-box">
+          <div><img src="./assets/icon-authenticate.png" alt="icon-versions"></div>
+          <div><span><strong>Authenticate to Abstract</strong></span>
+            <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
         </div>
       </div>
-    </navbar>
-    <section>
-      <div class="dashboard">
-        <div class="dash-child">
-          <div>How can we help?</div>
-          <form action="https://www.google.com/search?">
-            <input type="text" placeholder="Search" class="searchbox" name="q">
-          </form>
+      <div class="right">
+        <div class="content-box">
+          <div><img src="./assets/icon-account.png" alt="icon-versions"></div>
+          <div><span><strong>Manage your account</strong></span>
+            <p>Configure your account settings, such as your email, profile details, and password.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
         </div>
+        <div class="content-box">
+          <div><img src="./assets/icon-billing.png" alt="icon-versions"></div>
+          <div><span><strong>Manage billing</strong></span>
+            <p>Change subscriptions and payment details.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
+        </div>
+        <div class="content-box">
+          <div><img src="./assets/icon-comment.png" alt="icon-versions"></div>
+          <div><span><strong>Abstract support</strong></span>
+            <p>Get in touch with a human.</p>
+            <a href="">Learn More &#8594</a>
+          </div>
+        </div>
+
       </div>
-    </section>
-    <footer></footer>
-  </body>
+    </div>
+  </section>
+
+  <footer class="footer-down">
+
+    <div>
+      <p class="f1"><strong>Abstract</strong></p>
+      <p class="fin">Branches</p>
+    </div>
+    <div>
+      <p class="f1"><strong>Resources</strong></p>
+      <p class="fin">Blog</p>
+      <p class="fin">Help Center</p>
+      <p class="fin">Release Notes</p>
+      <p class="fin">Status</p>
+    </div>
+    <div>
+      <p class="f1"><strong>Community</strong></p>
+      <p class="fin">Twitter</p>
+      <p class="fin">LinkedIn</p>
+      <p class="fin">Facebook</p>
+      <p class="fin">Dribbble</p>
+      <p class="fin">Podcast</p>
+    </div>
+    <div>
+      <p class="f1"><strong>Company</strong></p>
+      <p class="fin">About Us</p>
+      <p class="fin">Carrers</p>
+      <p class="fin">Legal</p>
+
+      <p class="f2"><strong>Contact Us</strong></p>
+      <p class="fin">info@abstract.com</p>
+    </div>
+    <div class="f3"><img src="./assets/logo.svg" alt="" height="30px">
+      <p class="fin">&#169 Copyright 2022</p>
+      <p class="fin">Abstract Studio Design, Inc.</p>
+      <p class="fin">All rights reserved</p>
+    </div>
+
+  </footer>
+</body>
+
 </html>
